初步api设计
